--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=email-writer-sb
 
-gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent
-gemini.api.key=AIzaSyC1m2EkuWjue1gKKlP8G-zUrTSJeMBn9O8
+gemini.api.url=${GEMINI_URL}
+gemini.api.key=${GEMINI_KEY}
